@@ -1,6 +1,11 @@
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Id: $
 
+  13 Aug 2007; Andrew Gaffney <agaffney@gentoo.org> catalyst,
+  modules/generic_stage_target.py, modules/netboot2_target.py:
+  fix typo in getopt call for --clear-autoresume. thanks to
+  Tais M. Hansen <tais.hansen@osd.dk> in bug #188339 for catching this
+
   17 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org>
   modules/netboot2_target.py, targets/netboot2/netboot2-copyfile.sh,
   targets/support/netboot2-final.sh:
